--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,6 +30,6 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/profittrailer:latest
+          tags: ghcr.io/izzymoren0/profittrailer:latest
           context: .
           file: ./Dockerfile
